--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,3 +3,9 @@ node_modules
 .env
 
 /src/generated/prisma
+
+# Ignore generated prisma client
+backend/src/generated
+backend/dist/generated
+backend/node_modules
+node_modules
